--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/master-page/messages.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/master-page/messages.properties
@@ -6,18 +6,35 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-master.page.administrator			= Administrator
-master.page.administrator.action.1	= Action 1
-master.page.administrator.action.2	= Action 2
 
-master.page.customer				= Customer
-master.page.customer.action.1		= Action 1
-master.page.customer.action.2		= Action 2
+master.page.trips						= Trips
+master.page.categories 					= Categories
+master.page.applications				= Applications
+master.page.finder						= Finder
 
-master.page.profile 				= Profile
-master.page.profile.action.1 		= Action 1
-master.page.profile.action.2		= Action 2
-master.page.profile.action.3		= Action 3
+master.page.register					= Register
+master.page.register.ranger				= Ranger
+master.page.register.explorer			= Explorer
+	
+master.page.login 						= Login
+master.page.logout 						= Logout
 
-master.page.login 					= Login
-master.page.logout 					= Logout
+master.page.profile						= Profile
+
+master.page.manager						= Manager
+master.page.manager.create.trip			= Create trip
+master.page.manager.applications		= Applications
+master.page.manager.notes				= Notes
+master.page.manager.survivals			= Survivals
+
+master.page.explorer					= Explorer
+master.page.explorer.create.application	= Create application
+master.page.explorer.applications		= Applications
+master.page.explorer.survivals			= Survivals
+
+master.page.auditor						= Auditor
+master.page.auditor.audits				= Audits
+master.page.auditor.notes				= Notes
+
+master.page.sponsor						= Sponsor
+master.page.sponsor.sponsorships		= Sponsorships
