--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/master-page/messages_es.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/master-page/messages_es.properties
@@ -6,18 +6,34 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-master.page.administrator			= Administrador
-master.page.administrator.action.1	= Acción 1
-master.page.administrator.action.2	= Acción 2
+master.page.trips					= Excursiones
+master.page.categories 				= Categorías
+master.page.applications			= Solicitudes
+master.page.finder					= Buscador
 
-master.page.customer				= Cliente
-master.page.customer.action.1		= Acción 1
-master.page.customer.action.2		= Acción 2
+master.page.register				= Registro
+master.page.register.ranger			= Guarda
+master.page.register.explorer		= Explorador
 
-master.page.profile 				= Perfil
-master.page.profile.action.1 		= Acción 1
-master.page.profile.action.2		= Acción 2
-master.page.profile.action.3		= Acción 3
+master.page.login 					= Acceder
+master.page.logout 					= Cerrar sesión
 
-master.page.login 					= Entrar
-master.page.logout 					= Salir
+master.page.profile					= Perfil
+
+master.page.manager						= Gestor
+master.page.manager.create.trip			= Crear excursión
+master.page.manager.applications		= Solicitudes
+master.page.manager.notes				= Notas
+master.page.manager.survivals			= Clases de supervivencia
+
+master.page.explorer					= Explorador
+master.page.explorer.create.application	= Crear solicitud
+master.page.explorer.applications		= Solicitudes
+master.page.explorer.survivals			= Clases de supervivencia
+
+master.page.auditor						= Revisor
+master.page.auditor.audits				= Revisiones
+master.page.auditor.notes				= Notas
+
+master.page.sponsor						= Patrocinador
+master.page.sponsor.sponsorships		= Patrocinio
