--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/trip/messages.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/trip/messages.properties
@@ -6,13 +6,10 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-ranger.name					= Name
-ranger.surname				= Surname
-ranger.email				= Email
-ranger.phoneNumber			= Phone Number
-ranger.address				= Address
-ranger.username				= Username
-ranger.password				= Password
-ranger.save					= Save
-ranger.delete				= Delete
-ranger.cancel				= Cancel
+trip.tricker				= Ticker
+trip.title					= Title
+trip.description			= Description
+trip.price					= Price
+trip.requirement			= Requirement
+trip.tripStart				= Trip Start
+trip.tripEnd				= Trip End
