--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/trip/messages_es.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/trip/messages_es.properties
@@ -6,13 +6,10 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-ranger.name					= Nombre
-ranger.surname				= Apellidos
-ranger.email				= Correo electrónico
-ranger.phoneNumber			= Número de teléfono
-ranger.address				= Dirección
-ranger.username				= Usuario
-ranger.password				= Contraseña
-ranger.save					= Guardar
-ranger.delete				= Borrar
-ranger.cancel				= Cancelar
+trip.tricker				= Número de referencia
+trip.title					= Título
+trip.description			= Descripción
+trip.price					= Precio
+trip.requirement			= Requisitos
+trip.tripStart				= Comienzo de la excursión
+trip.tripEnd				= Fin de la excursión
