Trip y survival views

--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/trip/messages.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/trip/messages.properties
@@ -13,3 +13,7 @@ trip.price					= Price
 trip.requirement			= Requirement
 trip.tripStart				= Trip Start
 trip.tripEnd				= Trip End
+
+trip.save					= Save
+trip.cancel					= Cancel
+trip.delete					= Delete
