--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/trip/messages.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/trip/messages.properties
@@ -17,3 +17,5 @@ trip.tripEnd				= Trip End
 trip.save					= Save
 trip.cancel					= Cancel
 trip.delete					= Delete
+
+trip.confirm.delete			= The trip has been deleted
