--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/trip/messages_es.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/trip/messages_es.properties
@@ -17,3 +17,5 @@ trip.tripEnd				= Fin de la excursión
 trip.save					= Guardar
 trip.cancel					= Cancelar
 trip.delete					= Borrar
+
+trip.confirm.delete			= La excursión ha sido borrada
