--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/application/messages.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/application/messages.properties
@@ -11,3 +11,7 @@ application.comment			= Comment
 application.reason			= Reason
 application.creditcard		= Credit Card
 application.trip			= Trip
+application.save			= Save
+application.delete			= Delete
+application.cancel			= Cancel
+application.confirm.delete	= The application has been delete
