--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/application/messages_es.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/application/messages_es.properties
@@ -11,3 +11,7 @@ application.comment			= Comentario
 application.reason			= Motivo
 application.creditcard		= Tarjeta de crédito
 application.trip			= Excursión
+application.save			= Guardar
+application.delete			= Borrar
+application.cancel			= Cancelar
+application.confirm.delete	= La aplicación ha sido borrada
