--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/application/messages.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/application/messages.properties
@@ -14,4 +14,5 @@ application.trip			= Trip
 application.save			= Save
 application.delete			= Delete
 application.cancel			= Cancel
+application.create			= Create
 application.confirm.delete	= The application has been delete
