--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/application/messages_es.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/application/messages_es.properties
@@ -14,4 +14,5 @@ application.trip			= Excursión
 application.save			= Guardar
 application.delete			= Borrar
 application.cancel			= Cancelar
+application.create			= Crear
 application.confirm.delete	= La aplicación ha sido borrada
