Survival register and list

--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/survival/messages.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/survival/messages.properties
@@ -6,10 +6,12 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-trip.tricker				= Ticker
-trip.title					= Title
-trip.description			= Description
-trip.price					= Price
-trip.requirement			= Requirement
-trip.tripStart				= Trip Start
-trip.tripEnd				= Trip End
+survival.title				= Title
+survival.description		= Description
+survival.moment				= Moment
+survival.location			= Location
+survival.manager			= Manager
+survival.trip				= Trip
+survival.explorer			= Explorer
+
+survival.register			= Register
