--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/survival/messages_es.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/survival/messages_es.properties
@@ -6,10 +6,12 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-trip.tricker				= Número de referencia
-trip.title					= Título
-trip.description			= Descripción
-trip.price					= Precio
-trip.requirement			= Requisitos
-trip.tripStart				= Comienzo de la excursión
-trip.tripEnd				= Fin de la excursión
+survival.title				= Título
+survival.description		= Descripción
+survival.moment				= Momento
+survival.location			= Localicación
+survival.manager			= Gestor
+survival.trip				= Excursión
+survival.explorer			= Explorador
+
+survival.register			= Registrarse
