--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/audit/messages_es.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/audit/messages_es.properties
@@ -14,3 +14,8 @@ audit.attachment			= Adjunto
 audit.draftMode				= Modo Borrador
 audit.trip					= Escursión
 audit.auditor				= Auditor
+audit.save					= Guardar
+audit.delete				= Eliminar
+audit.cancel				= Cancelar
+audit.edit					= Editar
+audit.confirm.delete		= La revisión ha sido eliminada
