--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/audit/messages.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/audit/messages.properties
@@ -14,3 +14,8 @@ audit.attachment			= Attachment
 audit.draftMode				= Draft Mode
 audit.trip					= Trip
 audit.auditor				= Auditor
+audit.save					= Save
+audit.delete				= Delete
+audit.cancel				= Cancel
+audit.edit					= Edit
+audit.confirm.delete		= The audit has been delete
