--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/audit/messages_es.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/audit/messages_es.properties
@@ -13,7 +13,7 @@ audit.description			= Descripción
 audit.attachment			= Adjunto
 audit.draftMode				= Modo Borrador
 audit.trip					= Escursión
-audit.auditor				= Auditor
+audit.auditor				= Revisor
 audit.save					= Guardar
 audit.delete				= Eliminar
 audit.cancel				= Cancelar
