--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/note/messages.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/note/messages.properties
@@ -6,8 +6,8 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-ranger.moment				= Moment
-ranger.remark				= Remark
-ranger.reply				= Reply
-ranger.momentReply			= Moment Reply
-ranger.trip					= Trip
+note.moment					= Moment
+note.remark					= Remark
+note.reply					= Reply
+note.momentReply			= Moment Reply
+note.trip					= Trip
