--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/note/messages_es.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/note/messages_es.properties
@@ -6,8 +6,8 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-ranger.moment				= Momento
-ranger.remark				= Observacion
-ranger.reply				= Respuesta
-ranger.momentReply			= Momento de la respuesta
-ranger.trip					= Excursion
+note.moment					= Momento
+note.remark					= Observacion
+note.reply					= Respuesta
+note.momentReply			= Momento de la respuesta
+note.trip					= Excursion
