--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/note/messages_es.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/note/messages_es.properties
@@ -11,3 +11,8 @@ note.remark					= Observacion
 note.reply					= Respuesta
 note.momentReply			= Momento de la respuesta
 note.trip					= Excursion
+note.edit					= Editar
+note.addReply				= Añadir una respuesta
+note.delete					= Borrar
+note.cancel					= Cancelar
+note.save					= Guardar
