--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/note/messages.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/note/messages.properties
@@ -11,3 +11,8 @@ note.remark					= Remark
 note.reply					= Reply
 note.momentReply			= Moment Reply
 note.trip					= Trip
+note.edit					= Edit
+note.addReply				= addReply
+note.delete					= Delete
+note.cancel					= Cancel
+note.save					= Save
