--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/trip/messages.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/trip/messages.properties
@@ -13,9 +13,14 @@ trip.price					= Price
 trip.requirement			= Requirement
 trip.tripStart				= Trip Start
 trip.tripEnd				= Trip End
+trip.publication			= Publication
+trip.reason					= Reason
+trip.cancelled				= Cancelled
 
 trip.save					= Save
 trip.cancel					= Cancel
 trip.delete					= Delete
 
 trip.confirm.delete			= The trip has been deleted
+
+trip.create					= Create trip
