--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/trip/messages_es.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/trip/messages_es.properties
@@ -13,9 +13,14 @@ trip.price					= Precio
 trip.requirement			= Requisitos
 trip.tripStart				= Comienzo de la excursión
 trip.tripEnd				= Fin de la excursión
+trip.publication			= Fecha de publicación
+trip.reason					= Razón
+trip.cancelled				= Cancelado
 
 trip.save					= Guardar
 trip.cancel					= Cancelar
 trip.delete					= Borrar
 
 trip.confirm.delete			= La excursión ha sido borrada
+
+trip.create					= Crear viaje
