--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/finder/messages.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/finder/messages.properties
@@ -7,5 +7,10 @@
 # http://www.tdg-seville.info/License.html
 
 finder.singleKey					= Single Key
+finder.minPrice						= Min price
+finder.maxPrice						= Max price
+finder.start						= Start
+finder.end							= End
+
 finder.search						= Search
 finder.cancel						= Cancel
