--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/finder/messages_es.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/finder/messages_es.properties
@@ -7,5 +7,10 @@
 # http://www.tdg-seville.info/License.html
 
 finder.singleKey					= Palabra de búsqueda
+finder.minPrice						= Precio mínimo
+finder.maxPrice						= Precio máximo
+finder.start						= Comienzo
+finder.end							= Fin
+
 finder.search						= Buscar
 finder.cancel						= Cancelar
