--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/trip/messages.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/trip/messages.properties
@@ -21,6 +21,8 @@ trip.save					= Save
 trip.cancel					= Cancel
 trip.delete					= Delete
 
+trip.stage					= Stage
+
 trip.confirm.delete			= The trip has been deleted
 
 trip.create					= Create trip
