--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/trip/messages_es.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/trip/messages_es.properties
@@ -21,6 +21,8 @@ trip.save					= Guardar
 trip.cancel					= Cancelar
 trip.delete					= Borrar
 
+trip.stage					= Etapas
+
 trip.confirm.delete			= La excursión ha sido borrada
 
 trip.create					= Crear viaje
