--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/survival/messages.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/survival/messages.properties
@@ -15,3 +15,7 @@ survival.trip				= Trip
 survival.explorer			= Explorer
 
 survival.register			= Register
+
+survival.create				= Create
+survival.save				= Save
+survival.cancel				= Cancel
