--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/survival/messages_es.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/survival/messages_es.properties
@@ -15,3 +15,7 @@ survival.trip				= Excursión
 survival.explorer			= Explorador
 
 survival.register			= Registrarse
+
+survival.create				= Crear
+survival.save				= Guardar
+survival.cancel				= Cancelar
