--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/trip/messages.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/trip/messages.properties
@@ -11,11 +11,11 @@ trip.title					= Title
 trip.description			= Description
 trip.price					= Price
 trip.requirement			= Requirement
-trip.tripStart				= Trip Start
-trip.tripEnd				= Trip End
+trip.tripStart				= Trip start
+trip.tripEnd				= Trip end
 trip.publication			= Publication
-trip.reason					= Reason
 trip.cancelled				= Cancelled
+trip.category				= Category
 
 trip.save					= Save
 trip.cancel					= Cancel
