--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/trip/messages_es.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/trip/messages_es.properties
@@ -14,8 +14,8 @@ trip.requirement			= Requisitos
 trip.tripStart				= Comienzo de la excursión
 trip.tripEnd				= Fin de la excursión
 trip.publication			= Fecha de publicación
-trip.reason					= Razón
 trip.cancelled				= Cancelado
+trip.category				= Categoría
 
 trip.save					= Guardar
 trip.cancel					= Cancelar
