Código requisitos B correguidos

--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/audit/messages.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/audit/messages.properties
@@ -18,4 +18,5 @@ audit.save					= Save
 audit.delete				= Delete
 audit.cancel				= Cancel
 audit.edit					= Edit
+audit.create				= Create
 audit.confirm.delete		= The audit has been delete
