--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/audit/messages_es.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/audit/messages_es.properties
@@ -18,4 +18,5 @@ audit.save					= Guardar
 audit.delete				= Eliminar
 audit.cancel				= Cancelar
 audit.edit					= Editar
+audit.create				= Crear
 audit.confirm.delete		= La revisión ha sido eliminada
