--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/note/messages_es.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/note/messages_es.properties
@@ -16,3 +16,4 @@ note.addReply				= Añadir una respuesta
 note.delete					= Borrar
 note.cancel					= Cancelar
 note.save					= Guardar
+note.create					= Crear
