--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/trip/messages.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/trip/messages.properties
@@ -22,6 +22,7 @@ trip.cancel					= Cancel
 trip.delete					= Delete
 
 trip.stage					= Stage
+trip.audit					= Audits
 
 trip.confirm.delete			= The trip has been deleted
 
