--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/trip/messages_es.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/trip/messages_es.properties
@@ -22,6 +22,7 @@ trip.cancel					= Cancelar
 trip.delete					= Borrar
 
 trip.stage					= Etapas
+trip.audit					= Revisiones
 
 trip.confirm.delete			= La excursión ha sido borrada
 
