--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/sponsorship/messages.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/sponsorship/messages.properties
@@ -17,3 +17,4 @@ sponsorship.delete					= Delete
 sponsorship.cancel					= Cancel
 sponsorship.edit					= Edit
 sponsorship.confirm.delete			= The sponsorship has been delete
+sponsorship.create					= Create
