--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/sponsorship/messages_es.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/sponsorship/messages_es.properties
@@ -17,3 +17,4 @@ sponsorship.delete					= Eliminar
 sponsorship.cancel					= Cancelar
 sponsorship.edit					= Editar
 sponsorship.confirm.delete			= El patrocinio ha sido eliminado
+sponsorship.create					= Crear
