Registro de usuarios como Ranger y Explorer

--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/actor/messages.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/actor/messages.properties
@@ -15,3 +15,7 @@ actor.username				= Username
 actor.password				= Password
 actor.save					= Save
 actor.cancel				= Cancel
+
+
+actor.ranger				= Ranger
+actor.explorer				= Explorer
