--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/actor/messages_es.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/actor/messages_es.properties
@@ -15,3 +15,7 @@ actor.username				= Usuario
 actor.password				= Contraseña
 actor.save					= Guardar
 actor.cancel				= Cancelar
+
+
+actor.ranger				= Guarda
+actor.explorer				= Explorador
