APPLICATION GORDO AHÍ!!!

--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/application/messages.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/application/messages.properties
@@ -6,6 +6,7 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+application.moment			= Moment
 application.status			= Status
 application.comment			= Comment
 application.reason			= Reason
