--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/application/messages_es.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/application/messages_es.properties
@@ -6,6 +6,7 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+application.moment			= Momento
 application.status			= Estado
 application.comment			= Comentario
 application.reason			= Motivo
