--- a/Workspace-1.0/Acme-Explorer/src/main/webapp/views/application/messages.properties
+++ b/Workspace-1.0/Acme-Explorer/src/main/webapp/views/application/messages.properties
@@ -17,3 +17,10 @@ application.delete			= Delete
 application.cancel			= Cancel
 application.create			= Create
 application.confirm.delete	= The application has been delete
+application.holderName		= Holder name
+application.brandName		= Brand name
+
+application.cardNumber		= Card number
+application.expirationMonth	= Expiration month
+application.expirationYear	= Expiration year
+application.CVV				= CVV
